Spostata logica dalla classe HandleView alla classe Engine

--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -10,7 +10,8 @@ ball_color_componentB=0
 paddle_l=500
 paddle_t=1500
 paddle_r=800
-paddle_b=1600
+#paddle_b=1600
+paddle_b=1920
 paddle_color_componentA=255
 paddle_color_componentR=255
 paddle_color_componentG=0
