--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -11,8 +11,16 @@ paddle_l=500
 paddle_t=1500
 paddle_r=800
 #paddle_b=1600
-paddle_b=1920
+paddle_b=1800
 paddle_color_componentA=255
 paddle_color_componentR=255
 paddle_color_componentG=0
 paddle_color_componentB=0
+number_of_lines=3
+bricks_per_line=5
+brick_width=150
+brick_height=70
+brick_color_componentA=255
+brick_color_componentR=0
+brick_color_componentG=255
+brick_color_componentB=255
